# file-channel-rs

./: Cargo.toml
benches/: recv.rs  send.rs  write.rs
src/: buf.rs  channel.rs  compat.rs  fs.rs  lib.rs  receiver.rs  runtime.rs  sender.rs  state.rs  tests.rs  unstable.rs
src/fs/: buf.rs  reader.rs  runtime.rs  writer.rs
