[package]
name = "file-channel"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio-rt"]
tokio = ["dep:tokio"]
tokio-rt = ["tokio", "tokio/rt"]

[dependencies]
bytes = { version = "1.9.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
libc = "0.2.169"
pin-project = "1.1.7"
slab = "0.4.9"
tempfile = "3.14.0"
tokio = { version = "1.42.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
file-channel = { path = ".", features = ["tokio-rt"] }
rand = "0.8.5"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["fs", "macros", "io-util", "rt-multi-thread"] }


[[bench]]
name = "write"
harness = false
