[package]
name = "file-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.31", default-features = false }
pin-project = "1.1.7"
slab = "0.4.9"
tokio = { version = "1.42.0", features = ["rt"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
rand = "0.8.5"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "send"
harness = false

[[bench]]
name = "recv"
harness = false
